# libcpuinfo

./: CMakeLists.txt  README.md  package.json
.github/workflows/: integrate.yml
include/: cpuinfo.h
src/: darwin.c  linux.c  win32.c  x86.h
test/: CMakeLists.txt  info.c
